bottom space fix on mobile

--- a/css/custom/_base.scss
+++ b/css/custom/_base.scss
@@ -225,7 +225,7 @@ h2.card-title {
             margin-top: 2rem;
         }
         .footer {
-            margin-bottom: 0;
+            margin-bottom: -2rem;
         }
 
         .col-sm-12 {
